--- a/style.css
+++ b/style.css
@@ -10,19 +10,22 @@ body {
 header {
     background: #333;
     color: #fff;
-    padding: 1rem 0;
-    text-align: center;
+    padding: 1rem;
     position: sticky;
     top: 0;
     z-index: 1000;
 }
 
+header nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
 header nav ul {
     list-style: none;
     padding: 0;
-    display: flex;
-    justify-content: center;
     margin: 0;
+    display: flex;
 }
 
 header nav ul li {
